--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -18,37 +18,55 @@ const { title } = Astro.props as Props;
     <slot />
     <style>
       :root {
-        --font-size-base: clamp(1rem, 0.34vw + 0.91rem, 1.19rem);
-        --font-size-lg: clamp(1.2rem, 0.7vw + 1.2rem, 1.5rem);
-        --font-size-xl: clamp(2.44rem, 2.38vw + 1.85rem, 3.75rem);
-
-        --color-text: hsl(12, 5%, 4%);
-        --color-bg: hsl(10, 21%, 95%);
-        --color-border: hsl(17, 24%, 90%);
+        --color-foreground: #2c363f;
+        --color-background: #fef9ef;
+        --color-highlight: #ffad33;
       }
 
       html {
-        font-family: system-ui, sans-serif;
-        font-size: var(--font-size-base);
-        color: var(--color-text);
-        background-color: var(--color-bg);
+        color: var(--color-foreground);
+        background-color: var(--color-background);
       }
 
-      body {
+      *,
+      *::before,
+      *::after {
+        box-sizing: border-box;
+      }
+
+      * {
         margin: 0;
       }
-
-      :global(h1) {
-        font-size: var(--font-size-xl);
+      html,
+      body {
+        height: 100%;
       }
-
-      :global(h2) {
-        font-size: var(--font-size-lg);
+      body {
+        line-height: 1.5;
+        -webkit-font-smoothing: antialiased;
       }
-
-      :global(code) {
-        font-family: Menlo, Monaco, Lucida Console, Liberation Mono,
-          DejaVu Sans Mono, Bitstream Vera Sans Mono, Courier New, monospace;
+      img,
+      picture,
+      video,
+      canvas,
+      svg {
+        display: block;
+        max-width: 100%;
+      }
+      input,
+      button,
+      textarea,
+      select {
+        font: inherit;
+      }
+      p,
+      h1,
+      h2,
+      h3,
+      h4,
+      h5,
+      h6 {
+        overflow-wrap: break-word;
       }
     </style>
   </body>
