--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,13 +5,12 @@ import Cover from "../components/Cover.astro";
 import Footer from "../components/Footer.astro";
 import Centre from "components/Centre.astro";
 import Box from "components/Box.astro";
+import Header from "components/Header.astro";
 ---
 
 <Layout title="Welcome to my site.">
   <Cover>
-    <header>
-      <Title />
-    </header>
+    <Header />
     <main>
       <Centre>
         <Box>
