adding pages and handwriting

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -12,7 +12,12 @@ import Centre from "./Centre.astro";
 <footer>
   <Centre>
     <Box>
-      <p>built with astro and hosted on netlify</p>
+      <p>
+        built with <a href="https://astro.build">astro</a> and hosted on <a
+          href="http://netlify.com"
+          >netlify
+        </a>
+      </p>
       <p><small>&copy;2022 — davelovemartin</small></p>
     </Box>
   </Centre>
