--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -244,6 +244,7 @@ const { title } = Astro.props as Props;
           rgba(0, 0, 0, 0) 50%,
           var(--color-highlighter) 50%
         ) !important;
+        text-decoration: none;
       }
     </style>
   </body>
