--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,13 +1,14 @@
 ---
 import Box from "components/Box.astro";
 import Centre from "components/Centre.astro";
+import Writing from "components/Writing.astro";
 import Layout from "../layouts/Layout.astro";
 ---
 
 <Layout title="Welcome to my site.">
   <Centre>
     <Box>
-      <p>Hi, I’m Dave&hellip;</p>
+      <Writing />
       <p>I'm a creative technologist and I make interactive visualisations.</p>
     </Box>
   </Centre>
