improving hover states

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -246,6 +246,11 @@ const { title } = Astro.props as Props;
         ) !important;
         text-decoration: none;
       }
+
+      a:hover {
+        color: var(--color-incidental);
+        transition: all 0.2s linear;
+      }
     </style>
   </body>
 </html>
