--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -20,13 +20,19 @@ import Title from "./Title.astro";
     list-style: none;
   }
 
+  .navigation ul li {
+    margin: 0;
+  }
+
   .navigation a {
     text-decoration: none;
     color: currentColor;
+    display: inline-block;
   }
 
   .navigation a:hover svg path {
     fill: var(--color-incidental);
+    transition: all 0.2s linear;
   }
 </style>
 
