simplfy a few things

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,7 +1,5 @@
 ---
-import About from "./About.astro";
-import Contact from "./Contact.astro";
-import Journal from "./Journal.astro";
+import Thoughts from "./Thoughts.astro";
 import Experiments from "./Experiments.astro";
 import Title from "./Title.astro";
 ---
@@ -43,23 +41,13 @@ import Title from "./Title.astro";
   <nav class="navigation" aria-label="primary">
     <ul>
       <li>
-        <a href="/about">
-          <About />
-        </a>
-      </li>
-      <li>
-        <a href="/journal">
-          <Journal />
+        <a href="/thoughts">
+          <Thoughts />
         </a>
       </li>
       <li>
         <a href="/experiments">
           <Experiments />
-        </a>
-      </li>
-      <li>
-        <a href="/contact">
-          <Contact />
         </a>
       </li>
     </ul>
