--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,7 +1,7 @@
 ---
 import Cover from "../components/Cover.astro";
 import Footer from "../components/Footer.astro";
-import Header from "components/Header.astro";
+import Header from "../components/Header.astro";
 
 import "@fontsource/open-sans/variable-full.css";
 import "@fontsource/open-sans/variable-full-italic.css";
