--- a/src/pages/experiments.astro
+++ b/src/pages/experiments.astro
@@ -1,6 +1,6 @@
 ---
-import Box from "components/Box.astro";
-import Centre from "components/Centre.astro";
+import Box from "../components/Box.astro";
+import Centre from "../components/Centre.astro";
 import Layout from "../layouts/Layout.astro";
 ---
 
