--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,7 +1,7 @@
 ---
-import Box from "components/Box.astro";
-import Centre from "components/Centre.astro";
-import Writing from "components/Writing.astro";
+import Box from "../components/Box.astro";
+import Centre from "../components/Centre.astro";
+import Writing from "../components/Writing.astro";
 import Layout from "../layouts/Layout.astro";
 ---
 
@@ -9,7 +9,38 @@ import Layout from "../layouts/Layout.astro";
   <Centre>
     <Box>
       <Writing />
-      <p>I'm a creative technologist and I make interactive visualisations.</p>
+      <p>
+        I've forged a career at the intersection of design and web development
+        ✨
+      </p>
+      <p>
+        I advocate{" "}
+        <a
+          href="https://www.interaction-design.org/literature/article/a-simple-introduction-to-lean-ux"
+        >
+          Lean UX
+        </a>
+        , thriving in collaborative environments where my empathy, creativity and
+        leadership sparks innovation and brings out the best qualities of my team.
+      </p>
+      <p>
+        As an experience designer, I've conducted user and stakeholder
+        interviews, led ideation workshops and presented to clients.
+      </p>
+      <p>Flexing my Frontend Engineering skills, I pride myself on:</p>
+      <ul>
+        <li>writing well-formed semantic HTML,</li>
+        <li>styling with CSS (and Sass), and</li>
+        <li>
+          enhancing with JavaScript (including React and Typescript Frameworks).
+        </li>
+      </ul>
+      <p>I champion inclusive design and web accessibility.</p>
+      <hr />
+      <p>
+        Out of office, I love playing guitar, drinking good coffee and trail
+        running... but not at the same time.
+      </p>
     </Box>
   </Centre>
 </Layout>
