--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -1,5 +1,5 @@
 <style>
-  .center {
+  .card {
     box-sizing: content-box;
     margin-inline: auto;
     max-inline-size: var(--measure);
@@ -9,6 +9,6 @@
   }
 </style>
 
-<div class="center">
+<div class="card">
   <slot />
 </div>
