--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -31,15 +31,15 @@ import Layout from "../layouts/Layout.astro";
       <ul>
         <li>writing well-formed semantic HTML,</li>
         <li>styling with CSS (and Sass), and</li>
-        <li>
-          enhancing with JavaScript (including React and Typescript Frameworks).
-        </li>
+        <li>enhancing with JavaScript (including React).</li>
       </ul>
       <p>I champion inclusive design and web accessibility.</p>
       <hr />
       <p>
-        Out of office, I love playing guitar, drinking good coffee and trail
-        running... but not at the same time.
+        Although it's early days, you can read <a href="/thoughts">thoughts</a> from
+        my digital garden and check out my <a href="/experiments"
+          >experiments
+        </a> in interaction, visualisation and animation.
       </p>
     </Box>
   </Centre>
