--- a/src/components/Title.astro
+++ b/src/components/Title.astro
@@ -11,6 +11,15 @@ import Box from "../components/Box.astro";
   h1 {
     margin-top: -1rem;
   }
+
+  h1 a svg path {
+    fill: var(--color-foreground);
+    transition: fill var(--t1) linear;
+  }
+
+  h1 a:hover svg path {
+    fill: var(--color-incidental);
+  }
 </style>
 <Box>
   <h1>
