--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -5,12 +5,13 @@ import Header from "../components/Header.astro";
 
 import "@fontsource/open-sans/variable-full.css";
 import "@fontsource/open-sans/variable-full-italic.css";
+import Centre from "../components/Centre.astro";
 
 export interface Props {
   title: string;
 }
 
-const { title } = Astro.props as Props;
+const { title } = Astro.props.frontmatter || (Astro.props as Props);
 ---
 
 <!DOCTYPE html>
@@ -26,7 +27,10 @@ const { title } = Astro.props as Props;
     <Cover>
       <Header />
       <main>
-        <slot />
+        <Centre>
+          <h1>{title}</h1>
+          <slot />
+        </Centre>
       </main>
       <Footer />
     </Cover>
