--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,41 +6,37 @@ import Layout from "../layouts/Layout.astro";
 ---
 
 <Layout title="Welcome to my site.">
-  <Centre>
-    <Box>
-      <Writing />
-      <p>
-        I've forged a career at the intersection of design and web development
-        ✨
-      </p>
-      <p>
-        I advocate{" "}
-        <a
-          href="https://www.interaction-design.org/literature/article/a-simple-introduction-to-lean-ux"
-        >
-          Lean UX
-        </a>
-        , thriving in collaborative environments where my empathy, creativity and
-        leadership sparks innovation and brings out the best qualities of my team.
-      </p>
-      <p>
-        As an experience designer, I've conducted user and stakeholder
-        interviews, led ideation workshops and presented to clients.
-      </p>
-      <p>Flexing my Frontend Engineering skills, I pride myself on:</p>
-      <ul>
-        <li>writing well-formed semantic HTML,</li>
-        <li>styling with CSS (and Sass), and</li>
-        <li>enhancing with JavaScript (including React).</li>
-      </ul>
-      <p>I champion inclusive design and web accessibility.</p>
-      <hr />
-      <p>
-        Although it's early days, you can read <a href="/thoughts">thoughts</a> from
-        my digital garden and check out my <a href="/experiments"
-          >experiments
-        </a> in interaction, visualisation and animation.
-      </p>
-    </Box>
-  </Centre>
+  <Box>
+    <Writing />
+    <p>
+      I've forged a career at the intersection of design and web development ✨
+    </p>
+    <p>
+      I advocate{" "}
+      <a
+        href="https://www.interaction-design.org/literature/article/a-simple-introduction-to-lean-ux"
+      >
+        Lean UX
+      </a>
+      , thriving in collaborative environments where my empathy, creativity and leadership
+      sparks innovation and brings out the best qualities of my team.
+    </p>
+    <p>
+      As an experience designer, I've conducted user and stakeholder interviews,
+      led ideation workshops and presented to clients.
+    </p>
+    <p>Flexing my Frontend Engineering skills, I pride myself on:</p>
+    <ul>
+      <li>writing well-formed semantic HTML,</li>
+      <li>styling with CSS (and Sass), and</li>
+      <li>enhancing with JavaScript (including React).</li>
+    </ul>
+    <p>I champion inclusive design and web accessibility.</p>
+    <hr />
+    <p>
+      Although it's early days, you can read <a href="/thoughts">thoughts</a> from
+      my digital garden and check out my <a href="/experiments">experiments</a> in
+      interaction, visualisation and animation.
+    </p>
+  </Box>
 </Layout>
