--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -17,6 +17,7 @@ import NavItem from "./NavItem.astro";
     gap: 0.3rem 0.8rem;
     padding: 0;
     list-style: none;
+    margin: 0;
   }
 
   .navigation ul li {
