--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -132,15 +132,21 @@ const { title } = Astro.props.frontmatter || (Astro.props as Props);
       hgroup,
       hr,
       p,
+      a,
+      ul,
       pre,
       table {
-        margin-top: 1.5rem;
-        margin-bottom: 1.5rem;
+        margin-top: var(--s1);
+        margin-bottom: var(--s1);
       }
 
       blockquote {
         margin-top: 3rem;
         margin-bottom: 3rem;
+        padding-left: var(--s0);
+        font-variation-settings: "wdth" 100, "wght" 420;
+        word-spacing: 0.2em;
+        font-style: italic;
       }
 
       /* typography ("wdth" 75.0-100.0, "wght"	300-800) */
@@ -149,78 +155,50 @@ const { title } = Astro.props.frontmatter || (Astro.props as Props);
       .font-xxl {
         line-height: 1.3333;
         font-variation-settings: "wdth" 100, "wght" 500;
-        font-size: var(--s3);
+        font-size: var(--s2);
         word-spacing: 0.2em;
-      }
-
-      h1 + p,
-      .font-xxl + p {
-        margin-top: -1.5rem;
       }
 
       h2,
       .font-xl {
-        font-variation-settings: "wdth" 90, "wght" 400;
-        font-size: var(--s2);
-        word-spacing: 0.1em;
-      }
-
-      h2 + p,
-      .font-xl + p {
-        margin-top: -1.5rem;
-      }
-
-      h3,
-      .font-l {
-        font-variation-settings: "wdth" 82.5, "wght" 300;
-        font-style: italic;
-        font-size: var(--s2);
-      }
-
-      h3 + p,
-      .font-l + p {
-        margin-top: -1.5rem;
-      }
-
-      h4,
-      .font-m {
-        font-variation-settings: "wdth" 90, "wght" 500;
-        font-style: italic;
+        font-variation-settings: "wdth" 90, "wght" 600;
         font-size: var(--s1);
         word-spacing: 0.1em;
       }
 
-      h4 + p,
-      .font-m + p {
-        margin-top: -1.5rem;
-      }
-
-      h5,
-      .font-s {
-        font-variation-settings: "wdth" 82.5, "wght" 550;
-        text-transform: uppercase;
-        letter-spacing: 0.25ch;
+      h3,
+      .font-l {
+        font-variation-settings: "wdth" 90, "wght" 500;
         font-size: var(--s0);
-        word-spacing: 0.2em;
-      }
-
-      h5 + p,
-      .font-s + p {
-        margin-top: -1.5rem;
-      }
-
-      h6,
-      .font-xs {
-        font-variation-settings: "wdth" 75, "wght" 450;
+        font-style: italic;
         text-transform: uppercase;
-        letter-spacing: 0.25ch;
-        font-size: var(--s0);
-        word-spacing: 0.1em;
       }
 
-      h6 + p,
-      .font-xs + p {
-        margin-top: -1.5rem;
+      h1 + p,
+      .font-xxl + p,
+      h2 + p,
+      .font-xl + p,
+      h3 + p,
+      .font-l + p,
+      h1 + ul,
+      .font-xxl + ul,
+      h2 + ul,
+      .font-xl + ul,
+      h3 + ul,
+      .font-l + ul {
+        margin-top: calc(var(--s1) * -1);
+      }
+
+      p + p {
+        margin-block-start: 0;
+      }
+
+      h1,
+      h2,
+      h3,
+      p,
+      ul {
+        width: 100%;
       }
 
       p,
@@ -230,8 +208,10 @@ const { title } = Astro.props.frontmatter || (Astro.props as Props);
         font-variation-settings: "wdth" 100, "wght" 360;
         font-style: normal;
         font-size: var(--s0);
-        margin-top: 1.5em;
-        margin-bottom: 1.5em;
+      }
+
+      li {
+        margin-block: 0;
       }
 
       small {
