--- a/src/pages/typography.astro
+++ b/src/pages/typography.astro
@@ -5,7 +5,7 @@ import Layout from "../layouts/Layout.astro";
 
 <Layout title="Typography">
   <Box>
-    <h1>This is a h1</h1>
+    <h1>First level heading</h1>
     <p>
       If text is set ragged right, the word space (the space between words) can
       be fixed and unchanging. If the text is justified (set flush left and
@@ -20,7 +20,7 @@ import Layout from "../layouts/Layout.astro";
     </p>
     <blockquote>That's saying something</blockquote>
 
-    <h2>This is a h2</h2>
+    <h2>Second level heading</h2>
     <p>
       If text is set ragged right, the word space (the space between words) can
       be fixed and unchanging. If the text is justified (set flush left and
@@ -30,37 +30,7 @@ import Layout from "../layouts/Layout.astro";
       face will need a larger interval between the words. At larger sizes, when
       letterfit is tightened, the spacing of words can be tightened as well
     </p>
-    <h3>This is a h3</h3>
-    <p>
-      If text is set ragged right, the word space (the space between words) can
-      be fixed and unchanging. If the text is justified (set flush left and
-      right), the word space must be elastic. In either case the size of the
-      ideal word space varies from one circumstance to another, depending on
-      factors such as letterfit, type color, and size. A loosely fitted or bold
-      face will need a larger interval between the words. At larger sizes, when
-      letterfit is tightened, the spacing of words can be tightened as well
-    </p>
-    <h4>This is a h4</h4>
-    <p>
-      If text is set ragged right, the word space (the space between words) can
-      be fixed and unchanging. If the text is justified (set flush left and
-      right), the word space must be elastic. In either case the size of the
-      ideal word space varies from one circumstance to another, depending on
-      factors such as letterfit, type color, and size. A loosely fitted or bold
-      face will need a larger interval between the words. At larger sizes, when
-      letterfit is tightened, the spacing of words can be tightened as well
-    </p>
-    <h5>This is a h5</h5>
-    <p>
-      If text is set ragged right, the word space (the space between words) can
-      be fixed and unchanging. If the text is justified (set flush left and
-      right), the word space must be elastic. In either case the size of the
-      ideal word space varies from one circumstance to another, depending on
-      factors such as letterfit, type color, and size. A loosely fitted or bold
-      face will need a larger interval between the words. At larger sizes, when
-      letterfit is tightened, the spacing of words can be tightened as well
-    </p>
-    <h6>This is a h6</h6>
+    <h3>Third level heading</h3>
     <p>
       If text is set ragged right, the word space (the space between words) can
       be fixed and unchanging. If the text is justified (set flush left and
@@ -81,6 +51,12 @@ import Layout from "../layouts/Layout.astro";
     </p>
     <p>Another paragraph <small>with small text</small>.</p>
     <ul>
+      <li>
+        <a href="/">link</a>
+      </li>
+      <li>
+        <a href="/">link</a>
+      </li>
       <li>
         <a href="/">link</a>
       </li>
