fix multiple h1 issue

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,7 +5,7 @@ import Writing from "../components/Writing.astro";
 import Layout from "../layouts/Layout.astro";
 ---
 
-<Layout title="Welcome to my site.">
+<Layout title="davelovemartin">
   <Box>
     <Writing />
     <p>
