--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -28,10 +28,13 @@ const { title } = Astro.props.frontmatter || (Astro.props as Props);
       <Header />
       <main>
         <Centre>
-          <h1>{title}</h1>
+          <h1 class={title === "davelovemartin" ? "visually-hidden" : ""}>
+            {title}
+          </h1>
           <slot />
         </Centre>
       </main>
+
       <Footer />
     </Cover>
     <style is:global>
@@ -154,24 +157,23 @@ const { title } = Astro.props.frontmatter || (Astro.props as Props);
       h1,
       .font-xxl {
         line-height: 1.3333;
-        font-variation-settings: "wdth" 100, "wght" 500;
+        font-variation-settings: "wdth" 100, "wght" 600;
         font-size: var(--s2);
         letter-spacing: -0.025em;
       }
 
       h2,
       .font-xl {
-        font-variation-settings: "wdth" 90, "wght" 600;
-        font-size: var(--s1);
+        font-variation-settings: "wdth" 100, "wght" 600;
+        font-size: var(--s0);
         letter-spacing: -0.025em;
       }
 
       h3,
       .font-l {
-        font-variation-settings: "wdth" 90, "wght" 500;
+        font-variation-settings: "wdth" 100, "wght" 500;
         font-size: var(--s0);
         font-style: italic;
-        text-transform: uppercase;
         letter-spacing: -0.025em;
       }
 
@@ -251,6 +253,16 @@ const { title } = Astro.props.frontmatter || (Astro.props as Props);
 
       svg path {
         fill: var(--color-foreground);
+      }
+
+      .visually-hidden {
+        clip: rect(0 0 0 0);
+        clip-path: inset(50%);
+        height: 1px;
+        overflow: hidden;
+        position: absolute;
+        white-space: nowrap;
+        width: 1px;
       }
     </style>
   </body>
