--- a/src/components/Grid.astro
+++ b/src/components/Grid.astro
@@ -2,6 +2,7 @@
   .grid {
     display: grid;
     grid-gap: var(--s1);
+    width: 100%;
   }
 
   @supports (width: min(calc(var(--measure) / 3), 100%)) {
