--- a/src/components/Stack.astro
+++ b/src/components/Stack.astro
@@ -10,7 +10,11 @@
   }
 
   .stack > * + * {
-    margin-block-start: var(--space, 1.5rem);
+    margin-block-start: var(--s1);
+  }
+
+  .stack > :nth-child(2) {
+    margin-block-end: auto;
   }
 </style>
 
