--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -13,9 +13,9 @@ import Centre from "./Centre.astro";
   <Centre>
     <Box>
       <p>
-        built with <a href="https://astro.build">astro</a> and hosted on <a
+        Built with <a href="https://astro.build">Astro</a> and hosted on <a
           href="http://netlify.com"
-          >netlify
+          >Netlify
         </a>
       </p>
       <p><small>&copy;2022 — davelovemartin</small></p>
