--- a/src/pages/experiments.astro
+++ b/src/pages/experiments.astro
@@ -31,7 +31,7 @@ import Layout from "../layouts/Layout.astro";
     background-size: 10px 10px;
     width: 200px;
     border: solid 1px var(--color-foreground);
-    box-shadow: 1px 1px 2px var(--color-foreground);
+    box-shadow: var(--shadow1);
   }
 </style>
 
