--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -12,6 +12,10 @@ import Layout from "../layouts/Layout.astro";
       I've forged a career at the intersection of design and web development ✨
     </p>
     <p>
+      I'm exploring Innovation and Design Thinking in tech with a human-centered
+      approach.
+    </p>
+    <p>
       I advocate{" "}
       <a
         href="https://www.interaction-design.org/literature/article/a-simple-introduction-to-lean-ux"
@@ -22,21 +26,22 @@ import Layout from "../layouts/Layout.astro";
       sparks innovation and brings out the best qualities of my team.
     </p>
     <p>
-      As an experience designer, I've conducted user and stakeholder interviews,
-      led ideation workshops and presented to clients.
+      As a generalist and creative, I love connecting the dots, staying curious
+      and experimenting with what’s possible
     </p>
     <p>Flexing my Frontend Engineering skills, I pride myself on:</p>
     <ul>
-      <li>writing well-formed semantic HTML,</li>
-      <li>styling with CSS (and Sass), and</li>
-      <li>enhancing with JavaScript (including React).</li>
+      <li>writing well-formed semantic HTML (and SVG),</li>
+      <li>styling with CSS, and</li>
+      <li>progressively enhancing with JavaScript (including React.js).</li>
     </ul>
     <p>I champion inclusive design and web accessibility.</p>
     <hr />
     <p>
-      Although it's early days, you can read <a href="/thoughts">thoughts</a> from
-      my digital garden and check out my <a href="/experiments">experiments</a> in
-      interaction, visualisation and animation.
+      You can read <a href="/thoughts">thoughts from my digital garden</a> and check
+      out my <a href="/experiments"
+        >experiments in interaction, visualisation and animation
+      </a>.
     </p>
   </Box>
 </Layout>
