--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -3,6 +3,7 @@ import Thoughts from "./Thoughts.astro";
 import Experiments from "./Experiments.astro";
 import Title from "./Title.astro";
 import NavItem from "./NavItem.astro";
+import Box from "./Box.astro";
 ---
 
 <style is:global>
@@ -26,9 +27,9 @@ import NavItem from "./NavItem.astro";
 </style>
 
 <header>
-  <div class="logo">
+  <Box>
     <Title />
-  </div>
+  </Box>
   <nav class="navigation" aria-label="primary">
     <ul>
       <li>
