--- a/src/components/Social.astro
+++ b/src/components/Social.astro
@@ -6,21 +6,21 @@
     color: var(--color-foreground);
     display: block;
     padding: var(--s1);
-    outline: 0.0625rem solid transparent;
-    outline-offset: -0.125rem;
+    outline: var(--outline-offset) solid transparent;
+    outline-offset: calc(var(--outline-offset) * -1);
     transition: fill 0.1s ease-in-out 0s;
     background: none;
   }
   .social a:focus {
     color: var(--color-foreground);
-    outline: 0.0625rem solid var(--color-foreground);
-    border-radius: 0.5rem;
+    outline: var(--outline-offset) solid var(--color-incidental);
+    border-radius: var(--border-radius);
   }
   .social a svg {
     width: 1.5rem;
     fill: var(--color-foreground);
   }
-  .social a svg:hover {
+  .social a:hover svg {
     fill: var(--color-incidental);
   }
 </style>
