--- a/src/pages/experiments.astro
+++ b/src/pages/experiments.astro
@@ -1,47 +1,8 @@
 ---
-import Box from "../components/Box.astro";
-import Centre from "../components/Centre.astro";
 import Layout from "../layouts/Layout.astro";
+import A from "../experiments/A.astro";
 ---
 
-<style>
-  @keyframes bounce {
-    from {
-      transform: translateY(0);
-    }
-    to {
-      transform: translateY(160px);
-    }
-  }
-  .ball {
-    animation-name: bounce;
-    animation-duration: 1s;
-    animation-timing-function: ease-in-out;
-    animation-delay: 0s;
-    animation-iteration-count: infinite;
-    animation-direction: alternate;
-    animation-fill-mode: forwards;
-    fill: var(--color-highlight);
-  }
-  .graphic-container {
-    background-image: radial-gradient(
-      var(--color-incidental) 0.0625rem,
-      transparent 0
-    );
-    background-size: 10px 10px;
-    width: 200px;
-    border: solid 1px var(--color-foreground);
-    box-shadow: var(--shadow1);
-  }
-</style>
-
 <Layout title="Playground">
-  <Box>
-    <div class="graphic-container">
-      <svg width="200px" height="200px" viewBox="0 0 200 200">
-        <circle class="ball" cx="40" cy="20" r="20"></circle>
-      </svg>
-    </div>
-    <p>Animating a SVG circle with CSS keyframes</p>
-  </Box>
+  <A />
 </Layout>
