adding experiment and new note

--- a/src/pages/experiments.astro
+++ b/src/pages/experiments.astro
@@ -1,8 +1,10 @@
 ---
 import Layout from "../layouts/Layout.astro";
 import A from "../experiments/A.astro";
+import B from "../experiments/B.astro";
 ---
 
 <Layout title="Playground">
   <A />
+  <B />
 </Layout>
