--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -12,18 +12,14 @@ import Layout from "../layouts/Layout.astro";
       I've forged a career at the intersection of design and web development ✨
     </p>
     <p>
-      I'm exploring Innovation and Design Thinking in tech with a human-centered
-      approach.
-    </p>
-    <p>
       I advocate{" "}
       <a
         href="https://www.interaction-design.org/literature/article/a-simple-introduction-to-lean-ux"
       >
         Lean UX
       </a>
-      , thriving in collaborative environments where my empathy, creativity and leadership
-      sparks innovation and brings out the best qualities of my team.
+      , thriving in collaborative environments where my empathy and leadership brings
+      out the best qualities of my team.
     </p>
     <p>
       As a generalist and creative, I love connecting the dots, staying curious
